--- a/index.css
+++ b/index.css
@@ -37,3 +37,42 @@ body {
 .w-full button:hover .svgg path {
     fill: black;
 }
+
+@font-face {
+    font-family: Adigiana-Toybox-Regular;
+    src: url('Adigiana-Toybox-Regular.ttf.woff') format("woff");
+    font-weight: 400;
+    font-style: normal
+}
+
+.transform {
+    transform: translate(var(--tw-translate-x),var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
+}
+
+@keyframes marquee {
+    0% {
+        transform: translateX(0)
+    }
+
+    to {
+        transform: translateX(-100%)
+    }
+}
+
+.animate-marquee {
+    animation: marquee 10s linear infinite
+}
+
+@keyframes marquee2 {
+    0% {
+        transform: translateX(100%)
+    }
+
+    to {
+        transform: translateX(0)
+    }
+}
+
+.animate-marquee2 {
+    animation: marquee2 10s linear infinite
+}
